--- a/ApdateFilmUser/Views/AuthViews/ProfilePage.xaml
+++ b/ApdateFilmUser/Views/AuthViews/ProfilePage.xaml
@@ -35,12 +35,26 @@
                        CornerRadius="140"
                        IsClippedToBounds="True"
                        WidthRequest="140"
-                       HeightRequest="140">
-                    <Image Source="{Binding Avatar}">
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding SetImageCommand}"/>
-                        </Image.GestureRecognizers>
-                    </Image>
+                       HeightRequest="140"
+                       BorderColor="Transparent"
+                       BackgroundColor="Transparent">
+                    <Grid>
+                        <Frame HorizontalOptions="Center"
+       VerticalOptions="Center"
+       Padding="0"
+       CornerRadius="140"
+       IsClippedToBounds="True"
+       WidthRequest="140"
+       HeightRequest="140"
+       BorderColor="Transparent"
+       BackgroundColor="Gray" Opacity="0.1"/>
+                        <Image Source="{Binding Avatar}" Background="Transparent">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding SetImageCommand}"/>
+                            </Image.GestureRecognizers>
+                        </Image>
+                    </Grid>
+                    
                 </Frame>
                 <Frame CornerRadius="10" Padding="5"
                BackgroundColor="#4DC5C5C5">
