--- a/ApdateFilmUser/Views/CatalogFiltrPage.xaml
+++ b/ApdateFilmUser/Views/CatalogFiltrPage.xaml
@@ -67,18 +67,16 @@
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid Padding="10">
-                                <Frame CornerRadius="10" BackgroundColor="Transparent"
-                           BorderColor="Black">
-                                    <Frame.GestureRecognizers>
-                                        <TapGestureRecognizer 
+                            <Frame CornerRadius="10" BackgroundColor="Transparent"
+                           BorderColor="Transparent">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer 
 Command="{Binding Source={RelativeSource AncestorType={x:Type vm:CatalogFiltrViewModel}}, Path=TapMediaCommand}"
 CommandParameter="{Binding .}"/>
-                                    </Frame.GestureRecognizers>
-                                    <Image Source="{Binding Preview}"
+                                </Frame.GestureRecognizers>
+                                <Image Source="{Binding Preview}"
                                            WidthRequest="113" HeightRequest="170"/>
-                                </Frame>
-                            </Grid>
+                            </Frame>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
@@ -92,7 +90,7 @@ CommandParameter="{Binding .}"/>
                         <DataTemplate>
                             <Grid Padding="10">
                                 <Frame CornerRadius="10" BackgroundColor="Transparent"
-               BorderColor="Black">
+               BorderColor="Transparent">
                                     <Frame.GestureRecognizers>
                                         <TapGestureRecognizer 
 Command="{Binding Source={RelativeSource AncestorType={x:Type vm:CatalogFiltrViewModel}}, Path=TapMediaCommand}"
