--- a/ApdateFilmUser/Views/FavoritesPage.xaml
+++ b/ApdateFilmUser/Views/FavoritesPage.xaml
@@ -40,7 +40,7 @@
                         <DataTemplate>
                             <Grid Padding="10">
                                 <Frame CornerRadius="10" BackgroundColor="Transparent"
-                           BorderColor="Black">
+                           BorderColor="Transparent">
                                     <Frame.GestureRecognizers>
                                         <TapGestureRecognizer 
 Command="{Binding Source={RelativeSource AncestorType={x:Type vm:FavoriteViewModel}}, Path=TapMediaCommand}"
