--- a/ApdateFilmUser/Views/DirectorPage.xaml
+++ b/ApdateFilmUser/Views/DirectorPage.xaml
@@ -54,6 +54,7 @@
                                    FontSize="24"
                                    FontAttributes="Bold"
                                    TextColor="White"
+                                   Margin="5,0,0,0"
                                    HorizontalOptions="Center"
 Margin="0,0,0,10"/>
                         </StackLayout>
