--- a/ApdateFilmUser/Views/ActorsPage.xaml
+++ b/ApdateFilmUser/Views/ActorsPage.xaml
@@ -27,39 +27,38 @@
             </CarouselView.ItemsLayout>
             <CarouselView.ItemTemplate>
                 <DataTemplate>
-                    <Frame HasShadow="True" BorderColor="#EEEEEE" Padding="0" CornerRadius="15"
-                           BackgroundColor="Transparent" Margin="10">
+                    <Frame HasShadow="True" Padding="0" CornerRadius="15"
+                           BackgroundColor="Transparent" BorderColor="Transparent" Margin="10,140,10,0">
                         <Frame.GestureRecognizers>
                             <TapGestureRecognizer 
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type vm:ActorsViewModel}}, Path=TapActorCommand}"
                                 CommandParameter="{Binding .}"/>
                         </Frame.GestureRecognizers>
-                        <Grid>
+                        <StackLayout>
                             <!-- Фото актера -->
-                            <Image Source="{Binding Photo}" Aspect="AspectFill" 
-               HeightRequest="330" WidthRequest="240"/>
+                            <Image Source="{Binding Photo}" Background="Transparent" Aspect="AspectFill" 
+HeightRequest="330" WidthRequest="240"/>
+                            <Grid Background="Transparent">
+                                <BoxView Color="#80000000" VerticalOptions="End" 
+  HeightRequest="60" CornerRadius="0,0,15,15"/>
+                                <!-- Имя и фамилия -->
+                                <Label Text="{Binding Name}" 
+                                    TextColor="White" 
+                                    FontAttributes="Bold"
+                                    FontSize="14"
+                                    Margin="10,0,10,30"
+                                    VerticalOptions="End"
+                                    HorizontalOptions="Start"/>
 
-                            <!-- Затемнение внизу для текста -->
-                            <BoxView Color="#80000000" VerticalOptions="End" 
-                 HeightRequest="60" CornerRadius="0,0,15,15"/>
-
-                            <!-- Имя и фамилия -->
-                            <Label Text="{Binding Name}" 
-               TextColor="White" 
-               FontAttributes="Bold"
-               FontSize="14"
-               Margin="10,0,10,30"
-               VerticalOptions="End"
-               HorizontalOptions="Start"/>
-
-                            <Label Text="{Binding Surname}" 
-               TextColor="White" 
-               FontAttributes="Bold"
-               FontSize="14"
-               Margin="10,0,10,10"
-               VerticalOptions="End"
-               HorizontalOptions="Start"/>
-                        </Grid>
+                                <Label Text="{Binding Surname}" 
+                                    TextColor="White" 
+                                    FontAttributes="Bold"
+                                    FontSize="14"
+                                    Margin="10,0,10,10"
+                                    VerticalOptions="End"
+                                    HorizontalOptions="Start"/>
+                            </Grid>
+                        </StackLayout>
                     </Frame>
                 </DataTemplate>
             </CarouselView.ItemTemplate>
