--- a/ApdateFilmUser/Views/CatalogFiltrPage.xaml
+++ b/ApdateFilmUser/Views/CatalogFiltrPage.xaml
@@ -43,6 +43,7 @@
         Padding="5"
         CornerRadius="15"
         TextColor="White"
+                    Clicked="Button_Clicked"
         Background="Transparent"/>
             <Button Text="Категории"
         WidthRequest="100"
